Criando um controler primitivo.

--- a/gerenciador/src/main/webapp/WEB-INF/web.xml
+++ b/gerenciador/src/main/webapp/WEB-INF/web.xml
@@ -11,4 +11,8 @@
         <servlet-name>OlaMundo</servlet-name>
         <servlet-class>br.com.alura.gerenciador.servelet.OlaMundo</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>UnicaEntradaServlet</servlet-name>
+        <servlet-class>br.com.alura.gerenciador.servelet.UnicaEntradaServlet</servlet-class>
+    </servlet>
 </web-app>
