--- a/gerenciador/src/main/webapp/WEB-INF/web.xml
+++ b/gerenciador/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
          version="5.0">
+    <welcome-file-list>
+        <welcome-file>bem-vindo.html</welcome-file>
+    </welcome-file-list>
     <servlet>
         <servlet-name>NovaEmpresaServlet</servlet-name>
         <servlet-class>br.com.alura.gerenciador.classesDepreciadas.NovaEmpresaServlet</servlet-class>
