--- a/gerenciador/src/main/webapp/WEB-INF/web.xml
+++ b/gerenciador/src/main/webapp/WEB-INF/web.xml
@@ -7,17 +7,41 @@
         <welcome-file>bem-vindo.html</welcome-file>
     </welcome-file-list>
     <servlet>
-        <servlet-name>NovaEmpresaServlet</servlet-name>
-        <servlet-class>br.com.alura.gerenciador.classesDepreciadas.NovaEmpresaServlet</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>OlaMundo</servlet-name>
         <servlet-class>br.com.alura.gerenciador.classesDepreciadas.OlaMundo</servlet-class>
     </servlet>
+
     <servlet>
         <servlet-name>UnicaEntradaServlet</servlet-name>
-        <servlet-class>br.com.alura.gerenciador.servelet.Controller</servlet-class>
+        <servlet-class>br.com.alura.gerenciador.classesDepreciadas.Controller</servlet-class>
     </servlet>
+
+    <filter>
+        <filter-name>MonitoramentoFilter</filter-name>
+        <filter-class>br.com.alura.gerenciador.controller.MonitoramentoFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>MonitoramentoFilter</filter-name>
+        <url-pattern>/entrada</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>AutorizacaoFilter</filter-name>
+        <filter-class>br.com.alura.gerenciador.controller.AutorizacaoFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AutorizacaoFilter</filter-name>
+        <url-pattern>/entrada</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>ControllerFilter</filter-name>
+        <filter-class>br.com.alura.gerenciador.controller.ControllerFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>ControllerFilter</filter-name>
+        <url-pattern>/entrada</url-pattern>
+    </filter-mapping>
     <session-config>
         <!-- 10 min -->
         <session-timeout>10</session-timeout>
