--- a/loja/pom.xml
+++ b/loja/pom.xml
@@ -5,5 +5,35 @@
   <artifactId>loja</artifactId>
   <version>1.0.0</version>
   <name>Archetype - loja</name>
+  <packaging>war</packaging>
   <url>http://maven.apache.org</url>
+
+  <dependencies>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
+  <repositories>
+    <repository>
+      <id>spring-repo</id>
+      <url>https://repo.spring.io/release</url>
+    </repository>
+  </repositories>
+
+  <build>
+    <finalName>loja</finalName>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>11</source>
+          <target>11</target>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
