--- a/loja-virtual/pom.xml
+++ b/loja-virtual/pom.xml
@@ -14,6 +14,17 @@
       <artifactId>mariadb-java-client</artifactId>
       <version>LATEST</version>
     </dependency>
+    <dependency>
+      <groupId>c3p0</groupId>
+      <artifactId>c3p0</artifactId>
+      <version>0.9.1.2</version>
+    </dependency>
+    <dependency>
+      <groupId>com.mchange</groupId>
+      <artifactId>mchange-commons-java</artifactId>
+      <version>0.2.16</version>
+    </dependency>
+
   </dependencies>
 
   <build>
