--- a/spring-data/src/main/resources/application.properties
+++ b/spring-data/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.validationQuery=SELECT 1
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
